[gd_scene load_steps=11 format=3 uid="uid://ke438w5ne7cw"]

[ext_resource type="Script" uid="uid://cgpkxa13hhnox" path="res://src/game.gd" id="1_kc8ui"]
[ext_resource type="PackedScene" uid="uid://bdj8t5d1w0lh5" path="res://src/common/level_manager.tscn" id="2_bs6l1"]
[ext_resource type="Resource" uid="uid://7vtuecoxqef2" path="res://src/start_state.tres" id="2_pk08u"]
[ext_resource type="PackedScene" uid="uid://cc82ulrvcacy5" path="res://src/levels/test_level.tscn" id="4_pk08u"]
[ext_resource type="PackedScene" uid="uid://cdm2fhla0kigd" path="res://src/common/fade_panel.tscn" id="4_wqvko"]
[ext_resource type="PackedScene" uid="uid://dy7n873unauuc" path="res://src/levels/test_level2.tscn" id="5_4bcji"]
[ext_resource type="PackedScene" uid="uid://l2dskqk2haet" path="res://src/systems/list/scheduled_deaths.tscn" id="5_pk08u"]
[ext_resource type="PackedScene" uid="uid://6s4mcqvyfcgw" path="res://src/systems/character/passport.tscn" id="6_wqvko"]
[ext_resource type="PackedScene" uid="uid://vm05pthnusdv" path="res://src/systems/rules/rule_manual.tscn" id="7_cdx1q"]

[sub_resource type="Resource" id="Resource_5q4o7"]
metadata/__load_path__ = "res://src/tutorial_state.tres"

[node name="Game" type="Node2D"]
script = ExtResource("1_kc8ui")
start_state = ExtResource("2_pk08u")
game_state = SubResource("Resource_5q4o7")

[node name="LevelManager" parent="." node_paths=PackedStringArray("level_container") instance=ExtResource("2_bs6l1")]
levels = Array[PackedScene]([ExtResource("4_pk08u"), ExtResource("5_4bcji")])
level_container = NodePath("../Level")
override_level = ExtResource("4_pk08u")

[node name="Level" type="Node2D" parent="."]

[node name="HUDLayer" type="CanvasLayer" parent="."]

[node name="Passport" parent="HUDLayer" instance=ExtResource("6_wqvko")]
unique_name_in_owner = true
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -640.0
offset_top = -427.0
offset_right = -59.0
offset_bottom = 427.0
grow_horizontal = 0
grow_vertical = 2

[node name="ScheduledDeaths" parent="HUDLayer" instance=ExtResource("5_pk08u")]
unique_name_in_owner = true

[node name="RuleManual" parent="HUDLayer" instance=ExtResource("7_cdx1q")]
unique_name_in_owner = true

[node name="OverlayLayer" type="CanvasLayer" parent="."]
layer = 5

[node name="FadePanel" parent="OverlayLayer" instance=ExtResource("4_wqvko")]
unique_name_in_owner = true
metadata/_edit_lock_ = true

[connection signal="game_completed" from="LevelManager" to="." method="_on_level_manager_game_completed"]
[connection signal="level_ready" from="LevelManager" to="." method="_on_level_manager_level_ready"]
[connection signal="level_unloaded" from="LevelManager" to="." method="_on_level_manager_level_unloaded"]
